[gd_scene load_steps=15 format=2]

[ext_resource path="res://Title Screen/Quit.gd" type="Script" id=1]
[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/background pixel .1.jpg" type="Texture" id=3]
[ext_resource path="res://music/night-in-the-field.wav" type="AudioStream" id=4]
[ext_resource path="res://ButtonsScript.gd" type="Script" id=5]
[ext_resource path="res://Title Screen/Title screen.gd" type="Script" id=6]
[ext_resource path="res://rainyhearts.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 77
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 7 )

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -10.0
margin_right = 1.0
margin_bottom = 2.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 122.52
margin_top = 78.7401
margin_right = 1162.52
margin_bottom = 638.74
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="Menu"]
margin_right = 1040.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="Menu/Title"]
margin_right = 1040.0
margin_bottom = 78.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "MY COWS!"
align = 1
valign = 1

[node name="MainSection" type="HBoxContainer" parent="Menu"]
margin_top = 82.0
margin_right = 1040.0
margin_bottom = 531.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/MainSection"]
margin_right = 1040.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameScenes" type="VBoxContainer" parent="Menu/MainSection/Buttons"]
margin_right = 1040.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="New Game" type="Button" parent="Menu/MainSection/Buttons/GameScenes"]
margin_right = 1040.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Press to Play"
flat = true
script = ExtResource( 5 )
scene_to_load = "res://MainGame.tscn"

[node name="Quit" type="Button" parent="Menu/MainSection/Buttons"]
margin_top = 226.0
margin_right = 1040.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Quit"
flat = true
script = ExtResource( 1 )

[node name="AppInformation" type="HBoxContainer" parent="Menu"]
margin_top = 535.0
margin_right = 1040.0
margin_bottom = 559.0

[node name="Version" type="Label" parent="Menu/AppInformation"]
margin_right = 202.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "0.1"

[node name="Developer" type="Label" parent="Menu/AppInformation"]
margin_left = 206.0
margin_right = 656.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.78
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Hayley Demajo"

[node name="High score label" type="Label" parent="Menu/AppInformation"]
margin_left = 660.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.63
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "High score"

[node name="HighScoreText" type="Label" parent="Menu/AppInformation"]
margin_left = 1028.0
margin_right = 1039.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "0"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 639.691, 356.335 )
scale = Vector2( 1.82887, 1.25817 )
texture = ExtResource( 3 )

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true
[connection signal="pressed" from="Menu/MainSection/Buttons/Quit" to="Menu/MainSection/Buttons/Quit" method="_on_Quit_pressed"]
